--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "@zeit/next-less": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
+    "axios": "^0.18.0",
     "less": "^3.9.0",
+    "antd": "^3.15.0",
     "next": "^8.0.3",
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
