--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,23 @@
-{
-    "presets": [
-      ["next/babel", {
-        "preset-env": false,
-        "transform-runtime": {},
-        "styled-jsx": {},
-        "class-properties": {}
-      }]
-    ],
-    "plugins": []
+// {
+//     "presets": [
+//       ["next/babel", {
+//         "preset-env": false,
+//         "transform-runtime": {},
+//         "styled-jsx": {},
+//         "class-properties": {}
+//       }]
+//     ],
+//     "plugins": []
+//   }
+
+  {
+    "presets": ["next/babel"],
+    "plugins": [
+      [
+        "@babel/plugin-proposal-decorators",
+        {
+          "legacy": true
+        }
+      ]
+    ]
   }
