--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "axios": "^0.18.0",
     "less": "^3.9.0",
     "antd": "^3.15.0",
+    "babel-plugin-import": "^1.11.0",
     "next": "^8.0.3",
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.3.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5"
   },
   "author": "duuliy",
   "license": "ISC"
