--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=dev next dev -p 8888",
     "build": "cross-env NODE_ENV=production next build",
+    "sitemap": "next-sitemap",
     "start": "next start -p 8888",
     "lint": "next lint"
   },
@@ -35,11 +36,11 @@
     "immer": "^9.0.12",
     "lodash-webpack-plugin": "^0.11.6",
     "moment": "^2.29.3",
+    "next-sitemap": "^3.1.45",
     "postcss": "^8.4.13",
     "react-redux": "^8.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
-    "sass": "^1.50.0",
-    "tailwindcss": "^3.0.24"
+    "sass": "^1.50.0"
   }
 }
